@@ -1,3 +1,8 @@
+2007-08-15  Shawn Betts  <sabetts@shitbender.gagrod>
+
+	* user.lisp (format-time-string): restructure to be compatible with clisp
+	(*format-time-string-alist*): minor bug fixes
+
 2007-08-05  Shawn Betts  <sabetts@shitbender.gagrod>
 
 	* core.lisp (xwin-role): new function
